# alphasec-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
alphasec/: __init__.py  agent.py  async_agent.py  exceptions.py
alphasec/api/: __init__.py  api.py  async_api.py  constants.py  utils.py
alphasec/perp/: __init__.py  agent.py  async_agent.py  constants.py  ws.py
alphasec/transaction/: abi.py  constants.py  schemas.py  sign.py  utils.py
alphasec/websocket/: __init__.py  async_ws.py  types.py  ws.py
examples/: README.md  config.json.example
examples/config/: config.json  example.config copy.json
examples/market_data/: basic_balance.py  basic_orders_history.py  basic_tickers.py  basic_tokens.py  basic_trades.py  basic_transfer_history.py
examples/perp/: perp_order.py  perp_query.py  perp_websocket.py
examples/trading/: async_basic_order.py  basic_bridge.py  basic_order.py  basic_session.py  basic_stop_order.py  basic_token_deposit.py  (+3 more)
tests/: agent_accessors_test.py  api_init_test.py  api_json_error_test.py  api_mapping_guard_test.py  api_result_error_test.py  api_test.py  async_api_test.py  async_ws_test.py  create_session_test.py  error_contract_test.py  lazy_init_guard_test.py  market_parse_test.py  market_price_test.py  modify_guard_async_test.py  modify_guard_test.py  normalize_config_test.py  perp_async_e2e_test.py  perp_e2e_test.py  perp_scale_test.py  perp_wire_test.py  schemas_guard_test.py  sign_spot_test.py  sign_test.py  withdraw_passthrough_test.py  ws_pure_test.py  ws_reconnect_test.py  ws_test.py
(+3 files in other folders)
