[project]
name = "alphasec"
version = "0.1.0"
description = "trading sdk for alphasec orderbook dex"
authors = [
    {name = "Alphasec",email = "alphasec@alphasec.io"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "eth-utils>=2.1.0,<6.0.0",
    "eth-account>=0.10.0,<0.14.0",
    "websocket-client>=1.5.1,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "msgpack>=1.0.5,<2.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "web3 (>=7.13.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "alphasec"},]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


[build-system]
requires = ["poetry-core>=1.8.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
